# AshkeLord_The_Prince_of_The_city

./: CMakeLists.txt  README.md
assets/fonts/: .gitkeep
assets/textures/: .gitkeep
include/: Game.hpp  ResourceManager.hpp
include/Entities/: EnemyNPC.hpp  Entity.hpp  HealerNPC.hpp  MerchantNPC.hpp  MysticNPC.hpp  NPC.hpp  Player.hpp  QuestNPC.hpp
include/UI/: DialogueBox.hpp
src/: Game.cpp  ResourceManager.cpp  main.cpp
src/Entities/: EnemyNPC.cpp  Entity.cpp  HealerNPC.cpp  MerchantNPC.cpp  MysticNPC.cpp  NPC.cpp  Player.cpp  QuestNPC.cpp
src/UI/: DialogueBox.cpp
